cardName alignment fix

--- a/styles/semi-styles.css
+++ b/styles/semi-styles.css
@@ -987,8 +987,8 @@ body.semi-form {
         }
 
         .field-cardfaciacardname, .field-cardfaciacardname p {
-            right: 84px;
             top: 127px;
+            left: 79.2%;
         }
 
         .field-cardfaciacardno, .field-cardfaciacardno p, .field-cardfaciacardname, .field-cardfaciacardname p {
